maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:32: error: type mismatch;
 found   : List[Int]
 required: scala.collection.immutable.Nil.type
  listeX=x::listeX
          ^ShortestPathMaze:33: error: type mismatch;
 found   : List[Int]
 required: scala.collection.immutable.Nil.type
  listeY=y::listeY
          ^ShortestPathMaze:53: error: type mismatch;
 found   : List[Int]
 required: scala.collection.immutable.Nil.type
    listeX=x::listeX
            ^ShortestPathMaze:54: error: type mismatch;
 found   : List[Int]
 required: scala.collection.immutable.Nil.type
    listeY=y-1::listeY
              ^ShortestPathMaze:58: error: type mismatch;
 found   : List[Int]
 required: scala.collection.immutable.Nil.type
    listeX=x-1::listeX
              ^ShortestPathMaze:59: error: type mismatch;
 found   : List[Int]
 required: scala.collection.immutable.Nil.type
    listeY=y::listeY
            ^ShortestPathMaze:63: error: type mismatch;
 found   : List[Int]
 required: scala.collection.immutable.Nil.type
    listeX=x::listeX
            ^ShortestPathMaze:64: error: type mismatch;
 found   : List[Int]
 required: scala.collection.immutable.Nil.type
    listeY=y+1::listeY
              ^ShortestPathMaze:68: error: type mismatch;
 found   : List[Int]
 required: scala.collection.immutable.Nil.type
    listeX=x+1::listeX
              ^ShortestPathMaze:69: error: type mismatch;
 found   : List[Int]
 required: scala.collection.immutable.Nil.type
    listeY=y::listeY
            ^